# PIPELINE_AC_MR_TMR

./: .gitignore  Checkpoint_Plan.docx  DEVELOPER_BRIEF.md  PILOT-FEEDBACK.md  PILOT-SETUP.md  PROJECT.md  README.md  cd.txt  index.html  launch-agcensus.bat  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.scripts.config.ts
docs/: nepal-run-summary.json  pakistan-run-summary.json  v1-week4-checkpoint.md
files/: Claude_Code_Session_Sequence.docx
references/: DESIGN.md  mr-prompt-v1.3.md
scripts/: build-bundles.mjs  run-nepal.ts  run-pakistan.ts  verify-pakistan-tmr.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: export.mjs  generate.ts  ingest.mjs  test-connection.mjs
src-tauri/src/: lib.rs  main.rs
src/concepts/: wca-2020.json  wca-essential-items.json
src/data/: iso3.ts
src/generators/: essential-items.ts  evidence.ts  export-essential-items.ts  export-mr-docx.ts  export-mr.ts  export-tmr.ts  mr.ts  tmr.ts
src/hooks/: useProjects.ts
src/ingest/: excel.ts  pdf.ts  pipeline.ts  tables.ts
src/project/: io.ts  schema.ts  validate.ts
src/providers/: anthropic.ts  azure.ts  deepseek.ts  google.ts  index.ts  kimi.ts  model-registry.ts  openai.ts  pricing.json  types.ts
src/screens/: AuditLog.tsx  EssentialItemsReview.tsx  MrReview.tsx  (+4 more)
tests/: ingest.test.ts  mr-section1-pakistan.test.ts  mr-section1.test.ts  project.test.ts  providers.test.ts  tmr-routing.test.ts  tmr-subtable1.test.ts
(+18 files in other folders)
