[package]
name = "agcensus-compiler"
version = "0.1.0"
description = "AgCensus Compiler — FAO desktop app for compiling MR and TMR deliverables."
authors = ["FAO ESS Census Team"]
edition = "2021"

[lib]
name = "agcensus_compiler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
